--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>dubbo</artifactId>
 			<version>2.4.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty</artifactId>
+			<version>6.1.26</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
