--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
             <version>${guava.version}</version>
         </dependency>
 
+
+        <!-- Rest  -->
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
         <!-- spring -->
         <!--<dependency>
             <groupId>org.springframework</groupId>
