--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,12 @@
 					</connectors>
 				</configuration>
 			</plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-archetype-plugin</artifactId>
+                <version>2.4</version>
+            </plugin>
 		</plugins>
 	</build>
 </project>
